fix wardrobe item onclick behavior

--- a/app/src/main/res/layout/fragment_intro_page_3.xml
+++ b/app/src/main/res/layout/fragment_intro_page_3.xml
@@ -11,6 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="Bergabung bersama kami!"
+        android:textColor="@color/colorPrimary"
+        android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
