--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="historyRed">#F44336</color>
     <color name="historyYellow">#FFEB3B</color>
     <color name="historyGreen">@color/colorPrimary</color>
+    <color name="grey">#DBDBDB</color>
 </resources>
