--- a/app/src/main/res/layout/fragment_box.xml
+++ b/app/src/main/res/layout/fragment_box.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".ui.main.wardrobe.BoxFragment">
 
@@ -32,6 +32,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:backgroundTint="@color/colorPrimary"
+            android:enabled="false"
             android:text="Sedekahkan Pakaian"
             app:cornerRadius="8dp" />
 
