--- a/app/src/main/res/layout/fragment_wardrobe_detail.xml
+++ b/app/src/main/res/layout/fragment_wardrobe_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:scrollbars="none"
     tools:context=".ui.main.wardrobe.WardrobeDetailFragment">
 
     <LinearLayout
@@ -23,27 +24,35 @@
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="320dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="8dp"
+                    android:layout_height="220dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
                     app:cardCornerRadius="8dp">
 
                     <ImageView
                         android:id="@+id/clothImage1"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop" />
 
                 </com.google.android.material.card.MaterialCardView>
 
                 <com.google.android.material.card.MaterialCardView
                     android:layout_width="320dp"
-                    android:layout_height="200dp"
-                    android:layout_margin="8dp"
+                    android:layout_height="220dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
                     app:cardCornerRadius="8dp">
 
                     <ImageView
                         android:id="@+id/clothImage2"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop" />
 
                 </com.google.android.material.card.MaterialCardView>
 
@@ -52,29 +61,170 @@
         </HorizontalScrollView>
 
         <TextView
+            android:id="@+id/clothName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="textView" />
+            android:layout_gravity="start"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="Blouse Biru" />
 
         <TextView
+            android:id="@+id/clothSize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="textView" />
+            android:layout_gravity="start"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:text="M" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="textView" />
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="8dp"
+            app:cardCornerRadius="8dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="textView" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/header"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="start"
+                    android:layout_marginBottom="16dp"
+                    android:text="Detail baju"
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/gender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/header"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="16dp"
+                    android:text="Gender"
+                    android:textColor="@color/textCategory" />
+
+                <TextView
+                    android:id="@+id/clothGender"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/header"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="16dp"
+                    android:text="Wanita" />
+
+                <TextView
+                    android:id="@+id/age"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/gender"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="16dp"
+                    android:text="Kategori Usia"
+                    android:textColor="@color/textCategory" />
+
+                <TextView
+                    android:id="@+id/clothAge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/gender"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="16dp"
+                    android:text="Dewasa" />
+
+                <TextView
+                    android:id="@+id/type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/age"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="16dp"
+                    android:text="Jenis baju"
+                    android:textColor="@color/textCategory" />
+
+                <TextView
+                    android:id="@+id/clothType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/age"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="16dp"
+                    android:text="Blouse" />
+
+                <TextView
+                    android:id="@+id/condition"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/type"
+                    android:layout_alignParentStart="true"
+                    android:text="Kondisi"
+                    android:textColor="@color/textCategory" />
+
+                <TextView
+                    android:id="@+id/clothCondition"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/type"
+                    android:layout_alignParentEnd="true"
+                    android:text="Seperti Baru" />
+
+            </RelativeLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="textView" />
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp">
+
+            <TextView
+                android:id="@+id/clothDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:text="18/09/2019" />
+
+            <TextView
+                android:id="@+id/clothStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:text="Belum Disedekahkan"
+                android:textColor="@color/historyRed" />
+
+        </RelativeLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/addToBoxButton"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="Tambahkan ke Kotak"
+            android:textAllCaps="false"
+            app:cornerRadius="16dp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/deleteButton"
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/historyRed"
+            android:text="Hapus"
+            android:textAllCaps="false"
+            app:cornerRadius="16dp" />
 
     </LinearLayout>
 
