--- a/app/src/main/res/layout/fragment_wardrobe.xml
+++ b/app/src/main/res/layout/fragment_wardrobe.xml
@@ -11,6 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="?actionBarSize"
+        android:overScrollMode="never"
+        android:scrollbars="none"
         tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         tools:listitem="@layout/item_clothes"
         tools:spanCount="2" />
