--- a/app/src/main/res/layout/fragment_wardrobe_detail.xml
+++ b/app/src/main/res/layout/fragment_wardrobe_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:overScrollMode="never"
     android:scrollbars="none"
     tools:context=".ui.main.wardrobe.WardrobeDetailFragment">
 
@@ -16,6 +17,7 @@
         <HorizontalScrollView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:overScrollMode="never"
             android:scrollbars="none">
 
             <LinearLayout
