add Account Detail and Edit page UI

--- a/app/src/main/res/menu/menu_wardrobe.xml
+++ b/app/src/main/res/menu/menu_wardrobe.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/box"
         android:icon="@drawable/ic_box"
-        android:title="Box"
+        android:title="Kotak"
         app:showAsAction="always" />
 </menu>
