--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00796b</color>
-    <color name="colorPrimaryDark">#004c40</color>
+    <color name="colorPrimary">#00C9A5</color>
+    <color name="colorPrimaryDark">#008E75</color>
     <color name="colorAccent">#FAFAFA</color>
     <color name="colorAccentDark">#C7C7C7</color>
     <color name="white">#FFFFFF</color>
