--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -42,7 +42,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/button1"
+                    android:id="@+id/trophy"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
@@ -57,6 +57,7 @@
                     android:tint="@android:color/white" />
 
                 <ImageView
+                    android:id="@+id/account"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_marginStart="16dp"
