--- a/app/src/main/res/layout/fragment_intro_page_2.xml
+++ b/app/src/main/res/layout/fragment_intro_page_2.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="Mengapa Sawadikap?"
+        android:textAlignment="center"
         android:textColor="@color/colorPrimary"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
