--- a/app/src/main/res/layout/item_trophy.xml
+++ b/app/src/main/res/layout/item_trophy.xml
@@ -18,6 +18,7 @@
             android:padding="16dp">
 
             <com.google.android.material.card.MaterialCardView
+                android:id="@+id/card"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:layout_marginEnd="16dp"
