--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -22,7 +22,7 @@
         android:layout_above="@id/card"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="40dp"
         android:text="Daftar"
         android:textColor="@color/white"
         android:textSize="48sp"
@@ -90,6 +90,24 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="8dp"
+                android:text="Telepon"
+                android:textColor="@color/colorPrimary" />
+
+            <com.libizo.CustomEditText
+                android:id="@+id/phoneEditText"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/edit_background"
+                android:inputType="phone" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginBottom="8dp"
                 android:text="Kata Sandi"
                 android:textColor="@color/colorPrimary" />
 
@@ -108,7 +126,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginBottom="8dp"
-                android:text="Email"
+                android:text="Konfirmasi Kata Sandi"
                 android:textColor="@color/colorPrimary" />
 
             <com.libizo.CustomEditText
