--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -65,6 +65,10 @@
         <action
             android:id="@+id/action_accountDetailFragment_to_accountEditFragment"
             app:destination="@id/accountEditFragment" />
+        <argument
+            android:name="sedekah"
+            android:defaultValue="0"
+            app:argType="integer" />
     </fragment>
     <fragment
         android:id="@+id/accountEditFragment"
